Forms and Animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,11 @@
   <a routerLink="family">Family</a> &nbsp;
   <a routerLink="review">Review</a> &nbsp;
   <a routerLink="directive">Directive</a> &nbsp;
-  <a routerLink="pipes">Pipes</a>
+  <a routerLink="pipes">Pipes</a> &nbsp;
+  <a routerLink="consume services">Consume Services</a> &nbsp;
+  <a routerLink="template">Template Form</a> &nbsp;
+  <a routerLink="reactive">Reactive Form</a> &nbsp;
+  <a routerLink="animation">Animation Sample</a>
 </div>
 <!--<div>
   <MyFirstComponent></MyFirstComponent>
