--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,8 @@
   <a routerLink="consume services">Consume Services</a> &nbsp;
   <a routerLink="template">Template Form</a> &nbsp;
   <a routerLink="reactive">Reactive Form</a> &nbsp;
-  <a routerLink="animation">Animation Sample</a>
+  <a routerLink="animation">Animation Sample</a> &nbsp;
+  <a routerLink="remote">Rest API</a>
 </div>
 <!--<div>
   <MyFirstComponent></MyFirstComponent>
